[package]
edition      = "2024"
name         = "laser-lockdown-rs"
rust-version = "1.88"
version      = "0.0.1"

[[bin]]
name = "laser-lockdown-rs"
path = "src/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["esp-alloc", "esp-radio", "esp32s3", "embassy", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
embedded-io = "0.7.1"
esp-alloc = "0.9.0"
esp-radio = { version = "0.17.0", features = ["esp-alloc", "esp32s3", "unstable", "wifi", ] }
embassy-net = { version = "0.7.1", features = ["defmt", "dhcpv4", "medium-ethernet", "tcp", "udp", "dns"] }
embassy-executor = "0.9.1"
embassy-sync = "0.7"
embassy-time = "0.5.0"
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "println"] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
embedded-hal-bus = "0.3.0"
heapless = { version = "0.9.2", features = ["serde"] }
picoserve = { version = "0.17.1", features = ["embassy", "json"] }
embedded-sdmmc = "0.9.0"
sha2 = "0.11.0-rc.5"
serde = { version = "1", default-features = false, features = ["derive"] }
rand_core = "0.10.0"
rand = "0.10.0"
sntpc = "0.8.1"
sntpc-net-embassy = "0.8.0"
static_cell = "2.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
