[package]
edition      = "2024"
name         = "laser-lockdown-rs"
rust-version = "1.93.0"
version      = "0.0.1"

[[bin]]
name = "laser-lockdown-rs"
path = "src/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable", "psram"] }
esp-rtos = { version = "0.2.0", features = ["esp-alloc", "esp-radio", "esp32s3", "embassy", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-alloc = { version = "0.9.0", features = ["esp32s3"] }
esp-radio = { version = "0.17.0", features = ["esp-alloc", "esp32s3", "unstable", "wifi", ] }
embassy-net = { version = "0.9.1", features = ["dhcpv4", "tcp", "udp", "dns", "proto-ipv4"] }
embassy-executor = "0.9.1"
embassy-sync = "0.7"
embassy-time = "0.5.0"
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "println"] }
esp-println = { version = "0.17.0", default-features = false, features = ["esp32s3", "log-04", "uart"] }
embedded-hal-bus = "0.3.0"
heapless = { version = "0.9.2", features = ["serde"] }
picoserve = { version = "0.18.0", features = ["embassy", "json"] }
embedded-sdmmc = "0.9.0"
serde = { version = "1", default-features = false, features = ["derive"] }
sntpc = { version = "0.9.0", default-features = false }
sntpc-net-embassy = { version = "0.9.0", default-features = false }
static_cell = { version = "2.1.1" }
nb = "1.1.0"
serde-json-core = "0.6.0"
log = "0.4.29"
embassy-futures = "0.1.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
panic = "abort"
